build: Add Vite config

--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
 	"type": "module",
 	"main": "src/index.html",
 	"scripts": {
-		"dev": "vite src",
-		"build": "vite build src",
-		"preview": "vite preview src",
+		"dev": "vite",
+		"build": "vite build",
+		"preview": "vite preview",
 		"lint": "eslint . && tsc --noEmit && stylelint \"**/*.css\"",
 		"test": "echo \"Error: no test specified\" && exit 1"
 	},
