--- a/tsconfig.json
+++ b/tsconfig.json
@@ -200,6 +200,9 @@
 		/* Skip type checking all .d.ts files. */
 		"skipLibCheck": true
 	},
+	"include": [
+		"src/"
+	],
 	"exclude": [
 		"logs",
 		"pids",
