--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
 	"packageManager": "pnpm@8.14.0",
 	"dependencies": {
 		"react": "^18.2.0",
-		"react-dom": "^18.2.0"
+		"react-dom": "^18.2.0",
+		"react-helmet": "6.1.0"
 	},
 	"devDependencies": {
 		"@eslint/js": "^8.56.0",
@@ -29,6 +30,7 @@
 		"@types/node": "^20.11.0",
 		"@types/react": "^18.2.47",
 		"@types/react-dom": "^18.2.18",
+		"@types/react-helmet": "6.1.11",
 		"@typescript-eslint/eslint-plugin": "^6.18.1",
 		"@typescript-eslint/parser": "^6.18.1",
 		"@vitejs/plugin-react": "^4.2.1",
