--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
 		"lint": "eslint . && tsc --noEmit && stylelint \"**/*.css\"",
 		"test": "echo \"Error: no test specified\" && exit 1"
 	},
+	"license": "Apache-2.0",
 	"engines": {
 		"node": ">=20.11.0"
 	},
