--- a/package.json
+++ b/package.json
@@ -19,33 +19,31 @@
 	"dependencies": {
 		"@zxing/browser": "^0.1.4",
 		"@zxing/library": "^0.20.0",
-		"react": "^18.2.0",
-		"react-dom": "^18.2.0",
+		"react": "^18.3.1",
+		"react-dom": "^18.3.1",
 		"react-helmet": "6.1.0"
 	},
 	"devDependencies": {
-		"@eslint/js": "^8.56.0",
-		"@html-eslint/eslint-plugin": "^0.19.1",
-		"@html-eslint/parser": "^0.19.1",
-		"@stylistic/eslint-plugin": "^1.5.4",
-		"@stylistic/stylelint-config": "^1.0.1",
-		"@stylistic/stylelint-plugin": "^2.0.0",
-		"@types/node": "^20.11.0",
-		"@types/react": "^18.2.47",
-		"@types/react-dom": "^18.2.18",
-		"@types/react-helmet": "6.1.11",
-		"@typescript-eslint/eslint-plugin": "^6.18.1",
-		"@typescript-eslint/parser": "^6.18.1",
-		"@vitejs/plugin-react": "^4.2.1",
-		"eslint": "^8.56.0",
-		"eslint-plugin-react": "^7.33.2",
-		"eslint-plugin-react-hooks": "^4.6.0",
-		"eslint-plugin-react-refresh": "^0.4.5",
-		"globals": "^13.19.0",
-		"stylelint": "16.1.0",
+		"@eslint/js": "^9.11.1",
+		"@html-eslint/eslint-plugin": "^0.27.0",
+		"@html-eslint/parser": "^0.27.0",
+		"@stylistic/eslint-plugin": "^2.8.0",
+		"@stylistic/stylelint-config": "^2.0.0",
+		"@types/node": "ts5.3",
+		"@types/react": "ts5.3",
+		"@types/react-dom": "ts5.3",
+		"@types/react-helmet": "ts5.3",
+		"@vitejs/plugin-react": "^4.3.1",
+		"eslint": "^9.11.1",
+		"eslint-plugin-react": "^7.35.0",
+		"eslint-plugin-react-hooks": "^5.1.0-rc.0",
+		"eslint-plugin-react-refresh": "^0.4.12",
+		"globals": "^15.9.0",
+		"stylelint": "^16.8.0",
 		"stylelint-config-recess-order": "^4.4.0",
 		"stylelint-config-recommended": "^14.0.0",
-		"typescript": "^5.2.2",
-		"vite": "^5.0.13"
+		"typescript": "~5.5.3",
+		"typescript-eslint": "^8.7.0",
+		"vite": "^5.4.8"
 	}
 }
