--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -18,13 +18,15 @@
 
 		/* Language and Environment */
 		/* Set the JavaScript language version for emitted JavaScript and include compatible library declarations. */
-		"target": "ES2022",
+		"target": "ES2020",
 		/* Specify a set of bundled library declaration files that describe the target runtime environment. */
 		"lib": [
-			"ES2022"
+			"ES2020",
+			"DOM",
+			"DOM.Iterable"
 		],
 		/* Specify what JSX code is generated. */
-		// "jsx": "preserve",
+		"jsx": "react-jsx",
 		/* Enable experimental support for legacy experimental decorators. */
 		// "experimentalDecorators": true,
 		/* Emit design-type metadata for decorated declarations in source files. */
@@ -40,7 +42,7 @@
 		/* Disable including any library files, including the default lib.d.ts. */
 		// "noLib": true,
 		/* Emit ECMAScript-standard-compliant class fields. */
-		// "useDefineForClassFields": true,
+		"useDefineForClassFields": true,
 		/* Control what method is used to detect module-format JS files. */
 		"moduleDetection": "force",
 
@@ -61,7 +63,7 @@
 		// "typeRoots": [],
 		/* Specify type package names to be included without being referenced in a source file. */
 		"types": [
-			"node"
+			"vite/client"
 		],
 		/* Allow accessing UMD globals from modules. */
 		// "allowUmdGlobalAccess": true,
@@ -197,6 +199,6 @@
 		"skipLibCheck": true
 	},
 	"include": [
-		"vite.config.ts"
+		"src/"
 	]
 }
